[desktop-pwas] Remove icon inheritance when updating bookmark apps.

Bookmark apps had code that loaded old icons when updating and used them
if they were not replaced. In a Desktop PWA world, we should always
obey the manifest, and expunge old icons.

Bug: 771080
Change-Id: Ib2b7bdc63db7cfec0043ba5aeb5ca6673c150bab
Reviewed-on: https://chromium-review.googlesource.com/697164
Commit-Queue: Finnur Thorarinsson <finnur@chromium.org>
Reviewed-by: Finnur Thorarinsson <finnur@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507350}
Former-commit-id: 780f0e1f8d73edd9f8b6147f0e116d85272d2d38